<resources>

    <string name="app_name">TipCalc</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_tip_calc">TipCalc</string>
    <string name="billTotalText">Bill Total</string>
    <string name="tenPercent">10%</string>
    <string name="fifteenPercent">15%</string>
    <string name="twentyPercent">20%</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="custom">Custom</string>
    <string name="customPercent">18%</string>
    <string name="zero">0.00</string>

</resources>