<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:contentDescription="@string/app_name"
    android:padding="5dp"
    android:paddingLeft="5dp"
    android:shrinkColumns="1, 2, 3"
    android:stretchColumns="1, 2, 3" >

    <!-- tableRow0 -->
    <TableRow											
        android:id="@+id/tableRow0"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/billTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/billTotalText" />

        <EditText
            android:id="@+id/billEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>
    </TableRow>

   <!-- tableRow1 -->
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tenTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center|center_vertical"
            android:layout_weight="1"
            android:text="@string/tenPercent" />

        <TextView
            android:id="@+id/fifteenTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:layout_weight="1"
            android:text="@string/fifteenPercent" />

        <TextView
            android:id="@+id/twentyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:layout_weight="1"
            android:text="@string/twentyPercent" />
    </TableRow>

    <!-- tableRow2 -->
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tipTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/tip" />

        <EditText
            android:id="@+id/tip10EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="numberDecimal"
            android:longClickable="false"
            android:text="@string/zero"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/tip15EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="numberDecimal"
            android:longClickable="false"
            android:text="@string/zero"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/tip20EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="numberDecimal"
            android:longClickable="false"
            android:text="@string/zero"
            android:textSize="14sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/totalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/total" />

        <EditText
            android:id="@+id/total10EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="numberDecimal"
            android:longClickable="false"
            android:text="@string/zero"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/total15EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="numberDecimal"
            android:longClickable="false"
            android:text="@string/zero"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/total20EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="numberDecimal"
            android:longClickable="false"
            android:text="@string/zero"
            android:textSize="14sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/customTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:text="@string/custom" />

        <SeekBar
            android:id="@+id/customSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:layout_weight="1"
            android:focusable="false"
            android:paddingBottom="5dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:progress="18" />

        <TextView
            android:id="@+id/customTipTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:text="@string/customPercent" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tipCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/tip" />

        <EditText
            android:id="@+id/tipCustomEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="numberDecimal"
            android:longClickable="false"
            android:text="@string/zero"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/totalCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="5dp"
            android:text="@string/total" />

        <EditText
            android:id="@+id/totalCustomEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="numberDecimal"
            android:longClickable="false"
            android:text="@string/zero"
            android:textSize="14sp" />

    </TableRow>

</TableLayout>